--- a/LoanApp/Info.plist
+++ b/LoanApp/Info.plist
@@ -5,6 +5,8 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.testloanas.sample</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb333237499451181</string>
